# coalition-passport

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SUBMISSION.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  pages.yml
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx  passport-demo.tsx
clients/passport-cli/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
clients/passport-cli/idl/: coalition_passport.json
clients/passport-cli/src/: check-devnet.ts  cli.ts  core.ts
clients/passport-cli/test/: core.test.ts  instructions.test.ts
crates/loyalty-core/: Cargo.toml
crates/loyalty-core/fixtures/: demo.json
crates/loyalty-core/src/: lib.rs
crates/loyalty-core/tests/: demo_fixture.rs
lib/: passport-model.ts  solana-addresses.ts
programs/coalition_passport/: Cargo.toml
programs/coalition_passport/src/: lib.rs
programs/coalition_passport/tests/: litesvm_passport.rs
scripts/: devnet-demo.sh
test/: passport-model.test.ts  solana-addresses.test.ts
tests/: test_devnet_script.py
