[package]
name = "loyalty-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic state transitions for Coalition Passport loyalty accounts"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
