[package]
name = "coalition-passport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Coalition loyalty program with a non-transferable Token-2022 Passport"

[lib]
crate-type = ["cdylib", "lib"]
name = "coalition_passport"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=1.0.2", features = ["init-if-needed"] }
anchor-spl = "=1.0.2"
loyalty-core = { path = "../../crates/loyalty-core" }

[dev-dependencies]
litesvm = "=0.13.0"
solana-address = "=2.2.0"
solana-clock = "=3.1.0"
solana-instruction = "=3.2.0"
solana-keypair = "=3.1.2"
solana-message = "=3.1.0"
solana-signature = "=3.3.0"
solana-signer = "=3.0.0"
solana-system-interface = "=3.0.0"
solana-transaction = "=3.1.0"
